# priority-notify

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  send-notification.sh  server.spec.md  setup_authentik.md
.github/workflows/: server.yml
.tools/: send-notification.sh
alembic/: env.py
alembic/versions/: d8008e5e4c73_initial_tables.py
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  sse.py
app/routes/: auth.py  frontend.py  notifications.py  tokens.py
app/static/: app.js  style.css
app/templates/: base.html  dashboard.html  login.html  tokens.html
docker/: Dockerfile  docker-compose.yml
stow-disk-health/: .env.example  README.md  install.sh
tests/: conftest.py  test_auth.py  test_notifications.py  test_tokens.py
